--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@ html,body {
     <img src="icon.bmp" width="200px" height="200px" /> 
     <br /> 
     <h3 style="font-size:2rem;line-height:2.5rem;font-weight:normal;color:#B3EE3A"> Leo PE v.4 </h3> 
+    <h3 style="font-size:2rem;line-height:2.5rem;font-weight:normal;color:#B3EE3A"> A malware-less PE! </h3>
     <h3 style="font-size:2rem;line-height:2.5rem;font-weight:normal;color:#A52A2A"> 一个没有任何捆绑的PE! </h3>
     <h3 style="font-size:2rem;line-height:2.5rem;font-weight:normal;color:#A52A2A"> (download code PE04) </h3>
     <h3 style="font-size:2rem;line-height:2.5rem;font-weight:normal;color:#A52A2A"> (提取码 PE04) </h3>
     <br /> 
-    <a href="https://pan.baidu.com/s/1W-iiJtK3dJ3n6A570dL--A" target="_blank" class="button"> Start Using </a> 
-    <a href="readme.txt" target="_blank" class="button"> View Readme </a>
+    <a href="https://pan.baidu.com/s/1W-iiJtK3dJ3n6A570dL--A" target="_blank" class="button"> 开始使用 Start Using </a> 
+    <a href="readme.txt" target="_blank" class="button"> 查看须知 View Readme </a>
    </div> 
   </center>   
  </body>
